# compress-tool

./: .gitignore  README.md  analyze-archive.sh  common.sh  compress.sh  convert-7z-to-tarzst.sh  convert-to-tarzst.sh  create-tarzst.sh  decompress.sh  find-duplicate-sha256.sh  hash-folder.sh  input.tar.zst  install-zeekstd.sh
.github/workflows/: tests.yml  torrent-compress-recovery.yml
tests/: run.sh
tests/lib/: common.sh  zip.sh
tests/lib/python/: create_zip_with_compression.py  generate_test_file.py  zip_supported_compressors.py
tests/suites/: analyze_archive.sh  compress.sh  convert_to_tarzst.sh  create_tarzst.sh  decompress.sh  find_duplicate.sh  hash_folder.sh
tools/torrent_compress_recovery/: Makefile  README.md  pyproject.toml
tools/torrent_compress_recovery/tests/: conftest.py  test_bencode_extended.py  test_bep47.py  test_bz2.py  test_bz2_extended.py  test_cli.py  test_cli_extended.py  test_compressors.py  test_compressors_extended.py  test_gzip.py  test_gzip_constants.py  test_gzip_extended.py  test_new_formats_integration.py  test_overlapping_pieces.py  test_realistic.py  test_recovery.py  test_verify_constants.py  test_verify_extended.py  test_xz.py  test_xz_extended.py  test_zst.py  test_zst_extended.py
tools/torrent_compress_recovery/tests/fixtures/: prepare_real_data.py  prepare_real_data.sh
tools/torrent_compress_recovery/tests/fixtures/real_data/: sample.torrent
tools/torrent_compress_recovery/tests/fixtures/real_data/real_data/: sample.torrent
tools/torrent_compress_recovery/tests/integration/: conftest.py  test_cli_integration.py
tools/torrent_compress_recovery/torrent_compress_recovery/: bencode.py  bz2.py  cli.py  compressors.py  core.py  gzip.py  verify.py  xz.py  zst.py
